# nrf-hal

nrf-hal-common/: Cargo.toml
nrf-hal-common/src/: adc.rs
nrf51-hal/: Cargo.toml
